# rules_kubernetes

./: BUILD.bazel  CLAUDE.md  DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl  repositories.bzl
.github/workflows/: ci.yml
private/: binary.bzl  controller.bzl  launcher.py  manifest.bzl  server.bzl  test.bzl
tests/: BUILD.bazel  apiserver_smoke_test.sh  controller_manifest_test.sh  controller_test.sh  kubernetes_health_check_test.sh  kubernetes_server_test.sh  manifest_test.sh  server_manifest_test.sh
tests/controllers/echo_controller/: BUILD.bazel  main.py
tests/manifests/: test_clusterrole.yaml
toolchain/: BUILD.bazel  toolchain.bzl
