module(
    name = "rules_kubernetes",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.9")

kubernetes = use_extension("//:extensions.bzl", "kubernetes")
kubernetes.system(versions = ["1.29"])
use_repo(kubernetes,
    "k8s_1_29_linux_amd64",
    "k8s_1_29_darwin_arm64",
    "k8s_1_29_darwin_amd64",
)
