load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//:defs.bzl",
    "kubernetes_controller",
    "kubernetes_health_check",
    "kubernetes_manifest",
    "kubernetes_server",
    "kubernetes_test",
)

# ---------------------------------------------------------------------------
# Echo controller (no manifests — used by controller_test)
# ---------------------------------------------------------------------------

kubernetes_controller(
    name              = "echo_controller",
    controller_binary = "//tests/controllers/echo_controller:echo_controller_bin",
    ready_probe       = "env_file",
)

# ---------------------------------------------------------------------------
# Echo controller with attached manifests — used by controller_manifest_test
# ---------------------------------------------------------------------------

kubernetes_controller(
    name              = "echo_controller_with_manifest",
    controller_binary = "//tests/controllers/echo_controller:echo_controller_bin",
    manifests         = ":test_manifests",
    ready_probe       = "env_file",
)

# ---------------------------------------------------------------------------
# Manifest set shared by manifest_test, controller_manifest_test,
# and server_manifest_test
# ---------------------------------------------------------------------------

kubernetes_manifest(
    name = "test_manifests",
    srcs = ["manifests/test_clusterrole.yaml"],
)

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------

# Basic API server connectivity, namespace isolation, ConfigMap CRUD.
kubernetes_test(
    name = "apiserver_smoke_test",
    srcs = ["apiserver_smoke_test.sh"],
    size = "medium",
)

# Verify kubernetes_manifest applies YAML before the test binary runs.
kubernetes_test(
    name      = "manifest_test",
    srcs      = ["manifest_test.sh"],
    manifests = ":test_manifests",
    size      = "medium",
)

# End-to-end controller test: echo_controller mirrors ConfigMaps.
kubernetes_test(
    name       = "controller_test",
    srcs       = ["controller_test.sh"],
    controller = ":echo_controller",
    size       = "medium",
)

# Controller + manifest composition: manifest flows through kubernetes_controller.
kubernetes_test(
    name       = "controller_manifest_test",
    srcs       = ["controller_manifest_test.sh"],
    controller = ":echo_controller_with_manifest",
    size       = "medium",
)

# ---------------------------------------------------------------------------
# kubernetes_server lifecycle test
# ---------------------------------------------------------------------------

kubernetes_server(
    name = "k8s_server_test_svc",
)

kubernetes_health_check(
    name   = "k8s_server_test_health",
    server = ":k8s_server_test_svc",
)

# ---------------------------------------------------------------------------
# kubernetes_server + kubernetes_manifest composition test
# ---------------------------------------------------------------------------

kubernetes_server(
    name      = "k8s_server_manifest_svc",
    manifests = ":test_manifests",
)

kubernetes_health_check(
    name   = "k8s_server_manifest_health",
    server = ":k8s_server_manifest_svc",
)

sh_test(
    name = "kubernetes_server_test",
    srcs = ["kubernetes_server_test.sh"],
    args = ["$(rootpath :k8s_server_test_svc)"],
    data = [":k8s_server_test_svc"],
    size = "medium",
)

sh_test(
    name = "kubernetes_health_check_test",
    srcs = ["kubernetes_health_check_test.sh"],
    args = ["$(rootpath :k8s_server_test_health)"],
    data = [":k8s_server_test_health"],
    size = "small",
)

sh_test(
    name = "server_manifest_test",
    srcs = ["server_manifest_test.sh"],
    args = ["$(rootpath :k8s_server_manifest_svc)"],
    data = [":k8s_server_manifest_svc"],
    size = "medium",
)
